--- a/app/src/main/res/layout/fragment_client.xml
+++ b/app/src/main/res/layout/fragment_client.xml
@@ -7,30 +7,16 @@
     tools:ignore="MissingDefaultResource"
     android:orientation="vertical">
 
-    <RelativeLayout
-        android:id="@+id/rl_title"
+    <hxz.www.commonbase.view.KLToolbar
+        android:id="@+id/toolbar"
+        android:visibility="visible"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@color/white"
-        tools:ignore="MissingConstraints">
-
-        <TextView
-            android:layout_width="150dp"
-            android:layout_height="30dp"
-            android:text="客户管理"
-            android:textSize="22sp"
-            android:textColor="#212121"
-            android:layout_marginLeft="150dp"
-            android:layout_marginTop="10dp"
-            />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#ffffff"
-            android:layout_marginLeft="27dp"
-            />
-    </RelativeLayout>
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:tb_leftImage="@mipmap/back"
+        app:tb_title="客户管理"
+        android:layout_height="wrap_content" />
 <View
     android:layout_width="wrap_content"
     android:layout_height="10dp"
