--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,292 +9,288 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#398EEB"
-            android:paddingBottom="16dp"
-            >
+            android:paddingBottom="16dp">
 
 
             <ImageView
+                android:id="@+id/iv_expire"
                 android:layout_width="39dp"
                 android:layout_height="39dp"
-                android:src="@mipmap/home_ico_dt"
-                android:layout_marginTop="22dp"
                 android:layout_marginLeft="55dp"
-                android:id="@+id/iv_expire"
-                />
+                android:layout_marginTop="22dp"
+                android:src="@mipmap/home_ico_dt" />
+
             <TextView
+                android:id="@+id/tv_expice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="当天到期"
-                android:textSize="14sp"
-                android:textColor="#ffffff"
-               android:id="@+id/tv_expice"
-                android:layout_marginTop="10dp"
                 android:layout_below="@id/iv_expire"
                 android:layout_marginLeft="48dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginBottom="16dp"
-                />
+                android:text="当天到期"
+                android:textColor="#ffffff"
+                android:textSize="14sp" />
 
 
             <ImageView
+                android:id="@+id/iv_aboutexpire"
                 android:layout_width="39dp"
                 android:layout_height="39dp"
-                android:src="@mipmap/home_ico_jj"
-                android:layout_marginTop="22dp"
                 android:layout_marginLeft="175dp"
-                android:id="@+id/iv_aboutexpire"
-                />
+                android:layout_marginTop="22dp"
+                android:src="@mipmap/home_ico_jj" />
+
             <TextView
+                android:id="@+id/tv_aboutexpice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="即将到期"
-                android:textSize="14sp"
-                android:textColor="#ffffff"
-                android:id="@+id/tv_aboutexpice"
-                android:layout_marginTop="10dp"
                 android:layout_below="@id/iv_aboutexpire"
                 android:layout_marginLeft="168dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginBottom="16dp"
-                />
+                android:text="即将到期"
+                android:textColor="#ffffff"
+                android:textSize="14sp" />
 
             <ImageView
+                android:id="@+id/iv_overdueexpire"
                 android:layout_width="39dp"
                 android:layout_height="39dp"
-                android:src="@mipmap/home_ico_yq"
-                android:layout_marginTop="22dp"
                 android:layout_marginLeft="295dp"
-                android:id="@+id/iv_overdueexpire"
-                />
+                android:layout_marginTop="22dp"
+                android:src="@mipmap/home_ico_yq" />
+
             <TextView
+                android:id="@+id/tv_overdueexpice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="逾期到期"
-                android:textSize="14sp"
-                android:textColor="#ffffff"
-                android:id="@+id/tv_overdueexpice"
-                android:layout_marginTop="10dp"
                 android:layout_below="@id/iv_overdueexpire"
                 android:layout_marginLeft="288dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginBottom="16dp"
-                />
-
+                android:text="逾期到期"
+                android:textColor="#ffffff"
+                android:textSize="14sp" />
 
 
         </RelativeLayout>
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="15dp"
-            android:background="#ebebeb"
-            />
+            android:background="#ebebeb" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
 
             >
+
             <RelativeLayout
+                android:id="@+id/rl_todo"
                 android:layout_width="match_parent"
                 android:layout_height="65dp"
-                android:paddingRight="15dp"
-                android:id="@+id/rl_todo"
-                >
+                android:paddingRight="15dp">
+
                 <ImageView
                     android:layout_width="44dp"
                     android:layout_height="44dp"
-                    android:src="@mipmap/home_ico_spdb"
-                    android:layout_marginTop="10dp"
                     android:layout_marginLeft="15dp"
-                    />
+                    android:layout_marginTop="10dp"
+                    android:src="@mipmap/home_ico_spdb" />
 
                 <TextView
+                    android:id="@+id/tv_examine"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="75dp"
+                    android:layout_marginTop="10dp"
                     android:text="待办审批"
                     android:textColor="#212121"
-                    android:textSize="16sp"
-                    android:layout_marginLeft="75dp"
-                    android:layout_marginTop="10dp"
-                    android:id="@+id/tv_examine"
-                />
+                    android:textSize="16sp" />
+
                 <TextView
                     android:id="@+id/tv_todoTitle"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="最新待办审批消息提示，最新待办审批"
-                    android:singleLine="true"
-                    android:textColor="#858585"
-
-                    android:textSize="13sp"
                     android:layout_marginLeft="75dp"
                     android:layout_marginTop="35dp"
-                    />
-                 <TextView
-                     android:id="@+id/tv_todoTime"
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:textSize="11sp"
-                     android:textColor="#858585"
-                     android:text="上午 08:18"
-                     android:layout_alignParentRight="true"
-                     android:layout_marginTop="10dp"
-                     />
+                    android:layout_toLeftOf="@id/tv_todoCount"
+                    android:singleLine="true"
+                    android:text="最新待办审批消息提示，最新待办审批"
+                    android:textColor="#858585"
+                    android:textSize="13sp" />
+
+                <TextView
+                    android:id="@+id/tv_todoTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginTop="10dp"
+                    android:text="上午 08:18"
+                    android:textColor="#858585"
+                    android:textSize="11sp" />
+
                 <TextView
                     android:id="@+id/tv_todoCount"
                     android:layout_width="18dp"
                     android:layout_height="18dp"
-                    android:textSize="11sp"
-                    android:textColor="#ffffff"
-                    android:text="4"
-                   android:layout_alignParentRight="true"
-                    android:layout_marginRight="30dp"
-    android:layout_marginBottom="10dp"
+                    android:layout_alignParentRight="true"
                     android:layout_alignParentBottom="true"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginBottom="10dp"
                     android:background="@drawable/textcolor_red"
                     android:gravity="center"
-                    />
+                    android:text="4"
+                    android:textColor="#ffffff"
+                    android:textSize="11sp" />
 
             </RelativeLayout>
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="#ebebeb"
-                />
+                android:background="#ebebeb" />
+
             <RelativeLayout
+                android:id="@+id/rl_notice"
                 android:layout_width="match_parent"
                 android:layout_height="65dp"
-                android:id="@+id/rl_notice"
-                android:paddingRight="15dp"
-                >
+                android:paddingRight="15dp">
+
                 <ImageView
                     android:layout_width="44dp"
                     android:layout_height="44dp"
-                    android:src="@mipmap/home_ico_tzgg"
-                    android:layout_marginTop="10dp"
                     android:layout_marginLeft="15dp"
-                    />
+                    android:layout_marginTop="10dp"
+                    android:src="@mipmap/home_ico_tzgg" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="通知公告"
-                    android:textColor="#212121"
-                    android:textSize="16sp"
                     android:layout_marginLeft="75dp"
                     android:layout_marginTop="10dp"
-                    />
+                    android:text="通知公告"
+                    android:textColor="#212121"
+                    android:textSize="16sp" />
+
                 <TextView
                     android:id="@+id/tv_noticeTitle"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="75dp"
+                    android:layout_marginTop="35dp"
+                    android:layout_toLeftOf="@id/tv_noticeTime"
+                    android:singleLine="true"
                     android:text="最新待办审批消息提示，最新待办审批"
                     android:textColor="#858585"
-                    android:textSize="13sp"
-                    android:layout_marginLeft="75dp"
-                    android:singleLine="true"
-                    android:layout_marginTop="35dp"
-                    />
+                    android:textSize="13sp" />
+
                 <TextView
                     android:id="@+id/tv_noticeTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="11sp"
-                    android:textColor="#858585"
-                    android:text="上午 08:18"
                     android:layout_alignParentRight="true"
                     android:layout_marginTop="10dp"
-                    />
+                    android:text="上午 08:18"
+                    android:textColor="#858585"
+                    android:textSize="11sp" />
+
                 <TextView
+                    android:id="@+id/tv_noticeCount"
                     android:layout_width="18dp"
                     android:layout_height="18dp"
-                    android:textSize="11sp"
-                    android:textColor="#ffffff"
-                    android:id="@+id/tv_noticeCount"
-                    android:text="4"
-                     android:layout_alignParentRight="true"
-                    android:layout_marginRight="30dp"
-                    android:layout_marginBottom="10dp"
+                    android:layout_alignParentRight="true"
                     android:layout_alignParentBottom="true"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginBottom="10dp"
                     android:background="@drawable/textcolor_red"
                     android:gravity="center"
-                    />
+                    android:text="4"
+                    android:textColor="#ffffff"
+                    android:textSize="11sp" />
 
             </RelativeLayout>
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="#ebebeb"
-                />
+                android:background="#ebebeb" />
+
             <RelativeLayout
+                android:id="@+id/rl_syetmMsg"
                 android:layout_width="match_parent"
                 android:layout_height="65dp"
-                android:paddingRight="15dp"
-                android:id="@+id/rl_syetmMsg"
-                >
+                android:paddingRight="15dp">
+
                 <ImageView
                     android:layout_width="44dp"
                     android:layout_height="44dp"
-                    android:src="@mipmap/home_ico_tzgg"
-                    android:layout_marginTop="10dp"
                     android:layout_marginLeft="15dp"
-                    />
+                    android:layout_marginTop="10dp"
+                    android:src="@mipmap/home_ico_tzgg" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="系统消息"
-                    android:textColor="#212121"
-                    android:textSize="16sp"
                     android:layout_marginLeft="75dp"
                     android:layout_marginTop="10dp"
-                    />
+                    android:text="系统消息"
+                    android:textColor="#212121"
+                    android:textSize="16sp" />
+
                 <TextView
                     android:id="@+id/tv_systemMsgTitle"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_toLeftOf="@id/tv_systemMsgCount"
                     android:layout_height="wrap_content"
-                    android:text="最新待办审批消息提示，最新待办审批"
-                    android:textColor="#858585"
-                    android:textSize="13sp"
                     android:layout_marginLeft="75dp"
                     android:layout_marginTop="35dp"
                     android:singleLine="true"
-                    />
+                    android:text="最新待办审批消息提示，最新待办审批"
+                    android:textColor="#858585"
+                    android:textSize="13sp" />
+
                 <TextView
                     android:id="@+id/tv_systemMsgTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="11sp"
-                    android:textColor="#858585"
-                    android:text="上午 08:18"
                     android:layout_alignParentRight="true"
                     android:layout_marginTop="10dp"
-                    />
+                    android:text="上午 08:18"
+                    android:textColor="#858585"
+                    android:textSize="11sp" />
+
                 <TextView
+                    android:id="@+id/tv_systemMsgCount"
                     android:layout_width="18dp"
                     android:layout_height="18dp"
-                    android:textSize="11sp"
-                    android:textColor="#ffffff"
-                    android:text="4"
                     android:layout_alignParentRight="true"
-                    android:layout_marginBottom="10dp"
                     android:layout_alignParentBottom="true"
-                    android:id="@+id/tv_systemMsgCount"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginRight="10dp"
                     android:background="@drawable/textcolor_red"
                     android:gravity="center"
-                    />
+                    android:text="4"
+                    android:textColor="#ffffff"
+                    android:textSize="11sp" />
 
             </RelativeLayout>
 
         </LinearLayout>
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="15dp"
-            android:background="#ebebeb"
-            />
+            android:background="#ebebeb" />
 
     </LinearLayout>
 </FrameLayout>
