--- a/app/src/main/res/layout/item_notice.xml
+++ b/app/src/main/res/layout/item_notice.xml
@@ -1,41 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:background="@color/white"
+    android:orientation="vertical"
     tools:ignore="MissingDefaultResource">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginLeft="20dp"
+        android:layout_height="30dp"
         android:layout_marginRight="20dp"
         android:gravity="center"
-        >
+        android:orientation="horizontal"
+        android:paddingLeft="15dp">
+
+        <View
+            android:id="@+id/tv_todoCount"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/textcolor_blue"
+            android:text="4"
+            android:textColor="#ffffff"
+            android:textSize="11sp" />
+
         <TextView
+            android:id="@+id/tv_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text=""
-            android:textSize="15sp"
+            android:layout_marginLeft="10dp"
             android:textColor="#212121"
-            android:id="@+id/tv_content"
-            />
+            android:textSize="15sp" />
 
     </LinearLayout>
 
+
     <TextView
+        android:id="@+id/tv_time"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="#2e2e2e"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
-        android:textSize="12sp"
         android:text="sdhshd"
-        android:id="@+id/tv_time"
-        />
+        android:textColor="#2e2e2e"
+        android:textSize="12sp" />
 
 </LinearLayout>
