--- a/app/src/main/res/layout/item_systemmsg.xml
+++ b/app/src/main/res/layout/item_systemmsg.xml
@@ -60,7 +60,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:textSize="12sp"
-            android:text="sdhshd"
+            android:text="2019-10-16"
             android:id="@+id/tv_content"
             />
     </LinearLayout>
