待办详情等

--- a/app/src/main/res/layout/fragment_business.xml
+++ b/app/src/main/res/layout/fragment_business.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.BusinessFragment">
+    tools:context=".buinese.BusinessFragment">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -45,207 +45,10 @@
                     android:src="@mipmap/banner" />
 
             </LinearLayout>
-            <RelativeLayout
-                android:layout_width="351dp"
-                android:layout_height="331dp"
-                android:layout_marginLeft="15dp"
-
-                >
-                <TextView
-                    android:layout_width="1dp"
-                    android:layout_height="331dp"
-                    android:layout_marginLeft="117dp"
-                    android:background="#f2f2f2" />
-
-                <ImageView
-                    android:id="@+id/tv_type"
-                    android:layout_width="100dp"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="22dp"
-                    android:src="@mipmap/business_ico_01" />
-
-                <TextView
-                    android:id="@+id/tv_text"
-                    android:layout_width="100dp"
-                    android:layout_height="20dp"
-                    android:gravity="center"
-                    android:text="业务发起"
-                    android:textColor="#212121"
-                    android:layout_marginTop="80dp"
-                    android:textSize="14sp" />
-
-
-                <ImageView
-                    android:id="@+id/tv_type2"
-                    android:layout_width="100dp"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="22dp"
-                    android:layout_marginLeft="125dp"
-                    android:src="@mipmap/business_ico_02" />
-
-                <TextView
-                    android:id="@+id/tv_text2"
-                    android:layout_width="100dp"
-                    android:layout_height="20dp"
-                    android:gravity="center"
-                    android:text="项目尽调"
-                    android:textColor="#212121"
-                    android:layout_marginLeft="125dp"
-                    android:layout_marginTop="80dp"
-                    android:textSize="14sp" />
-                <ImageView
-                    android:id="@+id/tv_type3"
-                    android:layout_width="100dp"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="22dp"
-                    android:layout_marginLeft="250dp"
-                    android:src="@mipmap/business_ico_03" />
-
-                <TextView
-                    android:id="@+id/tv_text3"
-                    android:layout_width="100dp"
-                    android:layout_height="20dp"
-                    android:gravity="center"
-                    android:text="受理汇总"
-                    android:textColor="#212121"
-                    android:layout_marginLeft="250dp"
-                    android:layout_marginTop="80dp"
-                    android:textSize="14sp" />
-
-                <!--2-->
-
-                <ImageView
-                    android:id="@+id/tv_type4"
-                    android:layout_width="100dp"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="130dp"
-                    android:src="@mipmap/business_ico_04" />
-
-                <TextView
-                    android:id="@+id/tv_text4"
-                    android:layout_width="100dp"
-                    android:layout_height="20dp"
-                    android:gravity="center"
-                    android:text="到期预警"
-                    android:textColor="#212121"
-                    android:layout_marginTop="190dp"
-                    android:textSize="14sp" />
-
-
-                <ImageView
-                    android:id="@+id/tv_type5"
-                    android:layout_width="100dp"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="130dp"
-                    android:layout_marginLeft="125dp"
-                    android:src="@mipmap/business_ico_05" />
-
-                <TextView
-                    android:id="@+id/tv_text5"
-                    android:layout_width="100dp"
-                    android:layout_height="20dp"
-                    android:gravity="center"
-                    android:text="贷后监管"
-                    android:textColor="#212121"
-                    android:layout_marginLeft="125dp"
-                    android:layout_marginTop="190dp"
-                    android:textSize="14sp" />
-                <ImageView
-                    android:id="@+id/tv_type6"
-                    android:layout_width="100dp"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="130dp"
-                    android:layout_marginLeft="250dp"
-                    android:src="@mipmap/business_ico_06" />
-
-                <TextView
-                    android:id="@+id/tv_text6"
-                    android:layout_width="100dp"
-                    android:layout_height="20dp"
-                    android:gravity="center"
-                    android:text="预警雷达"
-                    android:textColor="#212121"
-                    android:layout_marginLeft="250dp"
-                    android:layout_marginTop="190dp"
-                    android:textSize="14sp" />
-
-
-                <!--3-->
-
-                <ImageView
-                    android:id="@+id/tv_type7"
-                    android:layout_width="100dp"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="240dp"
-                    android:src="@mipmap/business_ico_07" />
-
-                <TextView
-                    android:id="@+id/tv_text7"
-                    android:layout_width="100dp"
-                    android:layout_height="20dp"
-                    android:gravity="center"
-                    android:text="到期还款"
-                    android:textColor="#212121"
-                    android:layout_marginTop="300dp"
-                    android:textSize="14sp" />
-
-
-                <ImageView
-                    android:id="@+id/tv_type8"
-                    android:layout_width="100dp"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="240dp"
-                    android:layout_marginLeft="125dp"
-                    android:src="@mipmap/business_ico_08" />
-
-                <TextView
-                    android:id="@+id/tv_text8"
-                    android:layout_width="100dp"
-                    android:layout_height="20dp"
-                    android:gravity="center"
-                    android:text="累计汇总"
-                    android:textColor="#212121"
-                    android:layout_marginLeft="125dp"
-                    android:layout_marginTop="300dp"
-                    android:textSize="14sp" />
-                <ImageView
-                    android:id="@+id/tv_type9"
-                    android:layout_width="100dp"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="240dp"
-                    android:layout_marginLeft="250dp"
-                    android:src="@mipmap/business_ico_09" />
-
-                <TextView
-                    android:id="@+id/tv_text9"
-                    android:layout_width="100dp"
-                    android:layout_height="20dp"
-                    android:gravity="center"
-                    android:text="当前汇总"
-                    android:textColor="#212121"
-                    android:layout_marginLeft="250dp"
-                    android:layout_marginTop="300dp"
-                    android:textSize="14sp" />
-
-                <!--3-->
-                <TextView
-                    android:layout_width="1dp"
-                    android:layout_height="331dp"
-                    android:layout_marginLeft="234dp"
-                    android:background="#f2f2f2" />
-                <TextView
-                    android:layout_width="351dp"
-                    android:layout_height="1dp"
-                    android:layout_marginTop="110dp"
-                    android:background="#f2f2f2" />
-                <TextView
-                    android:layout_width="351dp"
-                    android:layout_height="1dp"
-                    android:layout_marginTop="220dp"
-                    android:background="#f2f2f2" />
-
-
-            </RelativeLayout>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_tab"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
 
 
 
