--- a/app/src/main/res/layout/item_bustab.xml
+++ b/app/src/main/res/layout/item_bustab.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="#f2f2f2"
+    android:background="@color/white"
     android:padding="10dp"
     android:orientation="vertical">
 
@@ -12,7 +12,7 @@
         android:layout_width="40dp"
         android:layout_centerHorizontal="true"
         android:layout_height="40dp"
-        />
+        android:src="@mipmap/file_jpg" />
 
     <TextView
         android:id="@+id/attachment_name"
@@ -21,13 +21,7 @@
         android:layout_below="@id/attachment_cover"
         android:layout_centerHorizontal="true"
         android:singleLine="true"
-        android:textColor="@color/gray_999999"
+        android:textColor="@color/black"
         android:textSize="12sp" />
-
-    <View
-        android:layout_width="wrap_content"
-        android:layout_below="@id/attachment_name"
-        android:background="@color/gray_999999"
-        android:layout_height="0.2dp"/>
 
 </RelativeLayout>
