--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,7 +28,7 @@
     <style name="tv_busTv">
         <item name="android:layout_width">100dp</item>
         <item name="android:textColor">@color/black</item>
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">16dp</item>
         <item name="android:gravity">center</item>
 
     </style>
