--- a/app/src/main/res/layout/adapter_title.xml
+++ b/app/src/main/res/layout/adapter_title.xml
@@ -3,13 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="100dp"
     android:layout_height="40dp"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/white"
     android:gravity="center"
     android:orientation="horizontal">
 
+
     <TextView
         android:id="@+id/tv_name"
-        android:layout_width="wrap_content"
+        style="@style/tv_busTv"
+        tools:text="sds"
         android:layout_height="wrap_content" />
 
 </LinearLayout>
