--- a/app/src/main/res/layout/adapter_simple.xml
+++ b/app/src/main/res/layout/adapter_simple.xml
@@ -10,63 +10,66 @@
     <TextView
         android:id="@+id/tv_busData1"
         style="@style/tv_busTv"
-        tools:text="sds"
-        android:layout_height="wrap_content" />
+        tools:text="sds" />
     <TextView
         android:id="@+id/tv_busData2"
         style="@style/tv_busTv"
-        tools:text="sds"
-        android:layout_height="wrap_content" />
+        tools:text="sds" />
     <TextView
         android:id="@+id/tv_busData3"
         style="@style/tv_busTv"
-        tools:text="sds"
-        android:layout_height="wrap_content" />
+        tools:text="sds" />
 
     <TextView
         android:id="@+id/tv_busData4"
         style="@style/tv_busTv"
-        android:layout_width="wrap_content"
-        tools:text="sds"
-        android:layout_height="wrap_content" />
+        tools:text="sds"/>
     <TextView
         android:id="@+id/tv_busData5"
         style="@style/tv_busTv"
-        tools:text="sds"
-        android:layout_height="wrap_content" />
+        tools:text="sds" />
     <TextView
         android:id="@+id/tv_busData6"
         style="@style/tv_busTv"
-        tools:text="sds"
-        android:layout_height="wrap_content" />
+        tools:text="sds" />
     <TextView
         android:id="@+id/tv_busData7"
         style="@style/tv_busTv"
-        android:layout_width="wrap_content"
-        tools:text="sds"
-        android:layout_height="wrap_content" />
+        tools:text="sds" />
 
     <TextView
         android:id="@+id/tv_busData8"
         style="@style/tv_busTv"
-        tools:text="sds"
-        android:layout_height="wrap_content" />
+        tools:text="sds" />
 
     <TextView
         android:id="@+id/tv_busData9"
         style="@style/tv_busTv"
-        android:layout_width="wrap_content"
-        tools:text="sds"
-        android:layout_height="wrap_content" />
+        tools:text="sds" />
     <TextView
         android:id="@+id/tv_busData10"
         style="@style/tv_busTv"
-        tools:text="sds"
-        android:layout_height="wrap_content" />
+        tools:text="sds" />
     <TextView
         android:id="@+id/tv_busData11"
         style="@style/tv_busTv"
         tools:text="sds"
-        android:layout_height="wrap_content" />
+       />
+
+    <TextView
+        android:id="@+id/tv_busData12"
+        style="@style/tv_busTv"
+        tools:text="sds" />
+
+
+    <TextView
+        android:id="@+id/tv_busData13"
+        style="@style/tv_busTv"
+        tools:text="sds"
+        />
+    <TextView
+        android:id="@+id/tv_busData14"
+        style="@style/tv_busTv"
+        tools:text="sds" />
 
 </LinearLayout>
