--- a/app/src/main/res/layout/adapter_title.xml
+++ b/app/src/main/res/layout/adapter_title.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="100dp"
-    android:layout_height="40dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/white"
+    android:id="@+id/ll_titleParent"
     android:gravity="center"
-    android:orientation="horizontal">
-
+>
 
     <TextView
         android:id="@+id/tv_name"
         style="@style/tv_busTv"
-        tools:text="sds"
-        android:layout_height="wrap_content" />
+        android:text="sd"
+        android:visibility="visible"
+        tools:text="sds" />
 
 </LinearLayout>
