--- a/app/src/main/res/layout/fragment_business.xml
+++ b/app/src/main/res/layout/fragment_business.xml
@@ -20,7 +20,7 @@
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
-                   android:text="业务管理"
+                   android:text="业务"
                    android:textSize="22sp"
                    android:layout_marginLeft="150dp"
                   android:layout_marginTop="5dp"
@@ -48,6 +48,7 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_tab"
             android:layout_width="match_parent"
+                android:layout_margin="10dp"
             android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
 
 
