--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -24,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/iv_headportrait"
-            android:text="张三利"
+            android:text="管理员"
             android:textSize="16sp"
             android:textColor="#ffffff"
             android:layout_marginTop="60dp"
