--- a/app/src/main/res/layout/item_attachment.xml
+++ b/app/src/main/res/layout/item_attachment.xml
@@ -4,9 +4,13 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@color/white"
-    android:padding="10dp"
     android:orientation="vertical">
 
+    <RelativeLayout
+        android:id="@+id/rl_container"
+        android:layout_width="wrap_content"
+        android:layout_margin="20dp"
+        android:layout_height="wrap_content">
     <ImageView
         android:id="@+id/attachment_cover"
         android:layout_width="40dp"
@@ -21,13 +25,25 @@
         android:layout_below="@id/attachment_cover"
         android:layout_centerHorizontal="true"
         android:singleLine="true"
-        android:textColor="@color/gray_999999"
+        android:textColor="@color/black"
+        android:layout_marginTop="5dp"
         android:textSize="12sp" />
-
+    </RelativeLayout>
     <View
         android:layout_width="wrap_content"
-        android:layout_below="@id/attachment_name"
-        android:background="@color/gray_999999"
+        android:layout_below="@id/rl_container"
+        android:background="@color/gray_E5E5EA"
         android:layout_height="0.2dp"/>
+
+    <View
+        android:layout_width="0.1dp"
+        android:background="@color/gray_E5E5EA"
+        android:layout_height="match_parent"/>
+
+    <View
+        android:layout_width="0.1dp"
+       android:layout_alignParentRight="true"
+        android:background="@color/gray_E5E5EA"
+        android:layout_height="match_parent"/>
 
 </RelativeLayout>
