--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,12 +26,14 @@
 
 
     <style name="tv_busTv">
-        <item name="android:layout_width">100dp</item>
+        <item name="android:layout_width">120dp</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">16dp</item>
         <item name="android:gravity">center</item>
         <item name="android:paddingBottom">20dp</item>
         <item name="android:paddingTop">20dp</item>
+        <item name="android:visibility">gone</item>
 
     </style>
 </resources>
