--- a/app/src/main/res/layout/item_examine.xml
+++ b/app/src/main/res/layout/item_examine.xml
@@ -120,7 +120,7 @@
                 android:layout_marginTop="70dp"
 
                 android:layout_marginLeft="250dp"
-                android:text="审批活动"
+                android:text="待审批"
                 android:background="@drawable/bottonyuanj"
                 android:id="@+id/b_1"
                 android:textColor="#f1f1f1"
