--- a/app/src/main/res/layout/item_attachment.xml
+++ b/app/src/main/res/layout/item_attachment.xml
@@ -8,42 +8,49 @@
 
     <RelativeLayout
         android:id="@+id/rl_container"
-        android:layout_width="wrap_content"
-        android:layout_margin="20dp"
-        android:layout_height="wrap_content">
-    <ImageView
-        android:id="@+id/attachment_cover"
-        android:layout_width="40dp"
-        android:layout_centerHorizontal="true"
-        android:layout_height="40dp"
-        />
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_margin="20dp">
+
+        <ImageView
+            android:id="@+id/attachment_cover"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_centerHorizontal="true" />
+
+        <TextView
+            android:id="@+id/attachment_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/attachment_cover"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="5dp"
+            android:singleLine="true"
+            android:textColor="@color/black"
+            android:textSize="12sp" />
+    </RelativeLayout>
 
     <TextView
-        android:id="@+id/attachment_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/attachment_cover"
-        android:layout_centerHorizontal="true"
-        android:singleLine="true"
-        android:textColor="@color/black"
-        android:layout_marginTop="5dp"
-        android:textSize="12sp" />
-    </RelativeLayout>
+        android:id="@+id/tv_title"
+        android:layout_width="40dp"
+
+        android:layout_height="40dp" />
+
     <View
         android:layout_width="wrap_content"
+        android:layout_height="0.2dp"
         android:layout_below="@id/rl_container"
-        android:background="@color/gray_E5E5EA"
-        android:layout_height="0.2dp"/>
+        android:background="@color/gray_E5E5EA" />
 
     <View
         android:layout_width="0.1dp"
-        android:background="@color/gray_E5E5EA"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:background="@color/gray_E5E5EA" />
 
     <View
         android:layout_width="0.1dp"
-       android:layout_alignParentRight="true"
-        android:background="@color/gray_E5E5EA"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true"
+        android:background="@color/gray_E5E5EA" />
 
 </RelativeLayout>
