--- a/app/src/main/res/layout/item_attachment.xml
+++ b/app/src/main/res/layout/item_attachment.xml
@@ -33,8 +33,8 @@
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="40dp"
-
-        android:layout_height="40dp" />
+        android:layout_height="40dp"
+        android:textColor="@color/black" />
 
     <View
         android:layout_width="wrap_content"
